--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
         "php": "^8.1",
         "astrotomic/laravel-translatable": "^11.14",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "joedixon/laravel-translation": "^2.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "spatie/laravel-permission": "^6.9",
-        "tightenco/ziggy": "^2.3"
+        "tightenco/ziggy": "^2.3",
+        "ext-gd": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
